# simple_SQL_db_viewer

./: README.md  create_test_db.py  main.py  pyproject.toml  test_database.db
templates/: index.html  table_view.html
